--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -47,7 +47,7 @@
             <a href="#"><i class="fa-solid fa-blog"></i>Blog</a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-calendar-days"></i>Freal events <span class="new-listing">4 new </span></a>
+            <a href="travel.html"><i class="fa-solid fa-calendar-days"></i>Freal events <span class="new-listing">4 new </span></a>
           </li>
           <li>
             <a href="#"><i class="fa-regular fa-newspaper"></i>News feed <span class="new-listing">4 new </span></a>
@@ -132,8 +132,8 @@
                 <i class="fa-solid fa-circle-chevron-down"></i>
               </a>
               <ul class="dropdown-list__menu">
-                <li><a href="#">Log out</a></li>
-                <li><a href="#">Add account</a></li>
+                <li><a href="login.html">Log out</a></li>
+                <li><a href="register.html">Add account</a></li>
                 <li><a href="#">Setting account</a></li>
               </ul>
             </li>
