--- a/templates/Customer/travel.html
+++ b/templates/Customer/travel.html
@@ -41,7 +41,7 @@
       <div class="navigation">
         <ul>
           <li>
-            <a href="#"><i class="fa-solid fa-house"></i>Home</a>
+            <a href="HomeFreal.html"><i class="fa-solid fa-house"></i>Home</a>
           </li>
           <li>
             <a href="#"><i class="fa-regular fa-bookmark"></i>Storage</a>
@@ -138,8 +138,8 @@
                 <i class="fa-solid fa-circle-chevron-down"></i>
               </a>
               <ul class="dropdown-list__menu">
-                <li><a href="#">Log out</a></li>
-                <li><a href="#">Add account</a></li>
+                <li><a href="register.html">Log out</a></li>
+                <li><a href="login.html">Add account</a></li>
                 <li><a href="#">Setting account</a></li>
               </ul>
             </li>
