--- a/static/css/HomeFreal.main.css
+++ b/static/css/HomeFreal.main.css
@@ -1556,6 +1556,8 @@ textarea {
 }
 
 .section-title {
+  display: flex;
+  justify-content: space-between;
   color: var(--grey-color-font);
   font-size: 24px;
   font-weight: bold;
@@ -1636,11 +1638,15 @@ textarea {
 
 .month-selector {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  max-width: 200px;
 }
 
+.table th {
+  max-width: 20px;
+}
 .table th,
 .table td {
   text-align: center;
@@ -1657,7 +1663,11 @@ textarea {
   margin-bottom: 1rem;
   color: var(--white-color-font);
 }
-
+.best-resorts {
+  width: 100%;
+  margin-top: 4.2rem;
+  color: var(--white-color-font);
+}
 .best-resorts .list-group-item {
   display: flex;
   justify-content: space-between;
@@ -1667,13 +1677,7 @@ textarea {
   margin-bottom: 5px;
 }
 .best-resorts .list-group-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: none;
-  padding: 10px 15px;
   border-radius: 10px;
-  margin-bottom: 5px;
 }
 .list-group {
   display: -ms-flexbox;
