--- a/templates/Customer/travel.html
+++ b/templates/Customer/travel.html
@@ -310,22 +310,22 @@
                         <td>4</td>
                         <td>5</td>
                         <td class="selected">6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
+                        <td class="selected">7</td>
+                        <td class="selected">8</td>
+                        <td class="selected">9</td>
+                        <td class="selected">10</td>
                       </tr>
                       <tr>
-                        <td>11</td>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
+                        <td class="selected">11</td>
+                        <td class="selected">12</td>
+                        <td class="selected">13</td>
+                        <td class="selected">14</td>
+                        <td class="selected">15</td>
+                        <td class="selected">16</td>
+                        <td class="selected">17</td>
                       </tr>
                       <tr>
-                        <td>18</td>
+                        <td class="selected">18</td>
                         <td class="selected">19</td>
                         <td>20</td>
                         <td>21</td>
