--- a/templates/Customer/travel.html
+++ b/templates/Customer/travel.html
@@ -300,22 +300,22 @@
                         <td>4</td>
                         <td>5</td>
                         <td class="selected">6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
+                        <td class="selected-row">7</td>
+                        <td class="selected-row">8</td>
+                        <td class="selected-row">9</td>
+                        <td class="selected-row">10</td>
                       </tr>
                       <tr>
-                        <td>11</td>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
+                        <td class="selected-row">11</td>
+                        <td class="selected-row">12</td>
+                        <td class="selected-row">13</td>
+                        <td class="selected-row">14</td>
+                        <td class="selected-row">15</td>
+                        <td class="selected-row">16</td>
+                        <td class="selected-row">17</td>
                       </tr>
                       <tr>
-                        <td>18</td>
+                        <td class="selected-row">18</td>
                         <td class="selected">19</td>
                         <td>20</td>
                         <td>21</td>
@@ -347,7 +347,7 @@
                         </div>
                         <div class="resort-info">
                           <span class="resort-name">Heritage Resort</span>
-                          <span class="resort-location">Singapore</span>
+                          <span class="resort-location">Indonesia</span>
                         </div>
                       </div>
                       <span class="badge badge-primary badge-pill">$120/day</span>
